removed image brightness bug on mobile

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -13,6 +13,10 @@ body {
 	border: 1px solid black;
 	border-radius: 25%;
 	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: transparent;
 }
 
 .btn {
@@ -29,14 +33,6 @@ body {
 
 .btn:hover:not([disabled]) {
 	background-color: bisque;
-}
-
-.brightness0 {
-	filter: brightness(0%);
-}
-
-.brightness100 {
-	filter: brightness(100%);
 }
 
 .timer {
@@ -61,4 +57,36 @@ body {
 
 .wrong {
 	background-color: #ff6666;
+}
+
+.spinner {
+	width: 150px;
+	height: 150px;
+	padding: 3px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 50%;
+	background: rgb(63, 249, 220);
+	background: linear-gradient(
+		0deg,
+		rgba(63, 249, 220, 0.1) 33%,
+		rgba(63, 249, 220, 1) 100%
+	);
+	animation: spin 0.8s linear 0s infinite;
+}
+
+.circle-core {
+	width: 100%;
+	height: 100%;
+	border-radius: 50%;
+}
+
+@keyframes spin {
+	from {
+		transform: rotate(0);
+	}
+	to {
+		transform: rotate(359deg);
+	}
 }
